--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5382,7 +5382,49 @@
       "[CV]  C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf, total=  14.7s\n",
       "[CV] C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf .......\n",
       "[CV]  C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf, total=  14.6s\n",
-      "[CV] C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf .......\n"
+      "[CV] C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf .......\n",
+      "[CV]  C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf, total=  14.3s\n",
+      "[CV] C=2963.564121207815, gamma=0.15189814782062885, kernel=linear ...\n",
+      "[CV]  C=2963.564121207815, gamma=0.15189814782062885, kernel=linear, total=   8.2s\n",
+      "[CV] C=2963.564121207815, gamma=0.15189814782062885, kernel=linear ...\n",
+      "[CV]  C=2963.564121207815, gamma=0.15189814782062885, kernel=linear, total=   9.1s\n",
+      "[CV] C=2963.564121207815, gamma=0.15189814782062885, kernel=linear ...\n",
+      "[CV]  C=2963.564121207815, gamma=0.15189814782062885, kernel=linear, total=  10.2s\n",
+      "[CV] C=2963.564121207815, gamma=0.15189814782062885, kernel=linear ...\n",
+      "[CV]  C=2963.564121207815, gamma=0.15189814782062885, kernel=linear, total=   9.2s\n",
+      "[CV] C=2963.564121207815, gamma=0.15189814782062885, kernel=linear ...\n",
+      "[CV]  C=2963.564121207815, gamma=0.15189814782062885, kernel=linear, total=   8.3s\n",
+      "[CV] C=91.64267381686706, gamma=0.01575994483585621, kernel=linear ...\n",
+      "[CV]  C=91.64267381686706, gamma=0.01575994483585621, kernel=linear, total=   7.6s\n",
+      "[CV] C=91.64267381686706, gamma=0.01575994483585621, kernel=linear ...\n",
+      "[CV]  C=91.64267381686706, gamma=0.01575994483585621, kernel=linear, total=   7.0s\n",
+      "[CV] C=91.64267381686706, gamma=0.01575994483585621, kernel=linear ...\n",
+      "[CV]  C=91.64267381686706, gamma=0.01575994483585621, kernel=linear, total=   7.4s\n",
+      "[CV] C=91.64267381686706, gamma=0.01575994483585621, kernel=linear ...\n",
+      "[CV]  C=91.64267381686706, gamma=0.01575994483585621, kernel=linear, total=   8.2s\n",
+      "[CV] C=91.64267381686706, gamma=0.01575994483585621, kernel=linear ...\n",
+      "[CV]  C=91.64267381686706, gamma=0.01575994483585621, kernel=linear, total=   8.6s\n",
+      "[CV] C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf .....\n",
+      "[CV]  C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf, total=  20.1s\n",
+      "[CV] C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf .....\n",
+      "[CV]  C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf, total=  21.2s\n",
+      "[CV] C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf .....\n",
+      "[CV]  C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf, total=  13.2s\n",
+      "[CV] C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf .....\n",
+      "[CV]  C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf, total=  12.5s\n",
+      "[CV] C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf .....\n",
+      "[CV]  C=24547.601975705915, gamma=0.22153944050588595, kernel=rbf, total=  11.9s\n",
+      "[CV] C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf ......\n",
+      "[CV]  C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf, total=  11.9s\n",
+      "[CV] C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf ......\n",
+      "[CV]  C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf, total=  11.5s\n",
+      "[CV] C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf ......\n",
+      "[CV]  C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf, total=  12.2s\n",
+      "[CV] C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf ......\n",
+      "[CV]  C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf, total=  14.3s\n",
+      "[CV] C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf ......\n",
+      "[CV]  C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf, total=  11.8s\n",
+      "[CV] C=16483.850529752886, gamma=1.4752145260435134, kernel=linear ...\n"
      ]
     }
    ],
