--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5424,7 +5424,25 @@
       "[CV]  C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf, total=  14.3s\n",
       "[CV] C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf ......\n",
       "[CV]  C=22.76927941060928, gamma=0.22169760231351215, kernel=rbf, total=  11.8s\n",
-      "[CV] C=16483.850529752886, gamma=1.4752145260435134, kernel=linear ...\n"
+      "[CV] C=16483.850529752886, gamma=1.4752145260435134, kernel=linear ...\n",
+      "[CV]  C=16483.850529752886, gamma=1.4752145260435134, kernel=linear, total=  12.3s\n",
+      "[CV] C=16483.850529752886, gamma=1.4752145260435134, kernel=linear ...\n",
+      "[CV]  C=16483.850529752886, gamma=1.4752145260435134, kernel=linear, total=  19.2s\n",
+      "[CV] C=16483.850529752886, gamma=1.4752145260435134, kernel=linear ...\n",
+      "[CV]  C=16483.850529752886, gamma=1.4752145260435134, kernel=linear, total=  21.2s\n",
+      "[CV] C=16483.850529752886, gamma=1.4752145260435134, kernel=linear ...\n",
+      "[CV]  C=16483.850529752886, gamma=1.4752145260435134, kernel=linear, total=  18.4s\n",
+      "[CV] C=16483.850529752886, gamma=1.4752145260435134, kernel=linear ...\n",
+      "[CV]  C=16483.850529752886, gamma=1.4752145260435134, kernel=linear, total=  13.0s\n",
+      "[CV] C=101445.66881340064, gamma=1.052904084582266, kernel=rbf .......\n",
+      "[CV]  C=101445.66881340064, gamma=1.052904084582266, kernel=rbf, total= 1.1min\n",
+      "[CV] C=101445.66881340064, gamma=1.052904084582266, kernel=rbf .......\n",
+      "[CV]  C=101445.66881340064, gamma=1.052904084582266, kernel=rbf, total=  56.9s\n",
+      "[CV] C=101445.66881340064, gamma=1.052904084582266, kernel=rbf .......\n",
+      "[CV]  C=101445.66881340064, gamma=1.052904084582266, kernel=rbf, total= 1.2min\n",
+      "[CV] C=101445.66881340064, gamma=1.052904084582266, kernel=rbf .......\n",
+      "[CV]  C=101445.66881340064, gamma=1.052904084582266, kernel=rbf, total= 1.3min\n",
+      "[CV] C=101445.66881340064, gamma=1.052904084582266, kernel=rbf .......\n"
      ]
     }
    ],
