--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5442,7 +5442,13 @@
       "[CV]  C=101445.66881340064, gamma=1.052904084582266, kernel=rbf, total= 1.2min\n",
       "[CV] C=101445.66881340064, gamma=1.052904084582266, kernel=rbf .......\n",
       "[CV]  C=101445.66881340064, gamma=1.052904084582266, kernel=rbf, total= 1.3min\n",
-      "[CV] C=101445.66881340064, gamma=1.052904084582266, kernel=rbf .......\n"
+      "[CV] C=101445.66881340064, gamma=1.052904084582266, kernel=rbf .......\n",
+      "[CV]  C=101445.66881340064, gamma=1.052904084582266, kernel=rbf, total= 1.0min\n",
+      "[CV] C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf .......\n",
+      "[CV]  C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf, total=  23.6s\n",
+      "[CV] C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf .......\n",
+      "[CV]  C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf, total=  26.0s\n",
+      "[CV] C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf .......\n"
      ]
     }
    ],
