--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5448,7 +5448,43 @@
       "[CV]  C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf, total=  23.6s\n",
       "[CV] C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf .......\n",
       "[CV]  C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf, total=  26.0s\n",
+      "[CV] C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf .......\n",
+      "[CV]  C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf, total=  35.6s\n",
       "[CV] C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf .......\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf, total=  30.5s\n",
+      "[CV] C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf .......\n",
+      "[CV]  C=56681.80859029545, gamma=0.9763011917123741, kernel=rbf, total=  26.2s\n",
+      "[CV] C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf .......\n",
+      "[CV]  C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf, total=  12.3s\n",
+      "[CV] C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf .......\n",
+      "[CV]  C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf, total=  15.0s\n",
+      "[CV] C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf .......\n",
+      "[CV]  C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf, total=  22.5s\n",
+      "[CV] C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf .......\n",
+      "[CV]  C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf, total=  15.1s\n",
+      "[CV] C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf .......\n",
+      "[CV]  C=48.15822390928914, gamma=0.4633351167983427, kernel=rbf, total=  13.1s\n",
+      "[CV] C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf .......\n",
+      "[CV]  C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf, total=  12.3s\n",
+      "[CV] C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf .......\n",
+      "[CV]  C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf, total=  13.6s\n",
+      "[CV] C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf .......\n",
+      "[CV]  C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf, total=  12.2s\n",
+      "[CV] C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf .......\n",
+      "[CV]  C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf, total=  12.4s\n",
+      "[CV] C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf .......\n",
+      "[CV]  C=399.7268155705774, gamma=1.3078757839577408, kernel=rbf, total=  12.2s\n",
+      "[CV] C=251.14073886281363, gamma=0.8238105204914145, kernel=linear ...\n",
+      "[CV]  C=251.14073886281363, gamma=0.8238105204914145, kernel=linear, total=   9.9s\n",
+      "[CV] C=251.14073886281363, gamma=0.8238105204914145, kernel=linear ...\n",
+      "[CV]  C=251.14073886281363, gamma=0.8238105204914145, kernel=linear, total=   8.9s\n",
+      "[CV] C=251.14073886281363, gamma=0.8238105204914145, kernel=linear ...\n"
      ]
     }
    ],
