--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5484,7 +5484,29 @@
       "[CV]  C=251.14073886281363, gamma=0.8238105204914145, kernel=linear, total=   9.9s\n",
       "[CV] C=251.14073886281363, gamma=0.8238105204914145, kernel=linear ...\n",
       "[CV]  C=251.14073886281363, gamma=0.8238105204914145, kernel=linear, total=   8.9s\n",
-      "[CV] C=251.14073886281363, gamma=0.8238105204914145, kernel=linear ...\n"
+      "[CV] C=251.14073886281363, gamma=0.8238105204914145, kernel=linear ...\n",
+      "[CV]  C=251.14073886281363, gamma=0.8238105204914145, kernel=linear, total=  10.5s\n",
+      "[CV] C=251.14073886281363, gamma=0.8238105204914145, kernel=linear ...\n",
+      "[CV]  C=251.14073886281363, gamma=0.8238105204914145, kernel=linear, total=   9.0s\n",
+      "[CV] C=251.14073886281363, gamma=0.8238105204914145, kernel=linear ...\n",
+      "[CV]  C=251.14073886281363, gamma=0.8238105204914145, kernel=linear, total=   9.8s\n",
+      "[CV] C=60.17373642891687, gamma=1.2491263443165994, kernel=linear ....\n",
+      "[CV]  C=60.17373642891687, gamma=1.2491263443165994, kernel=linear, total=   7.8s\n",
+      "[CV] C=60.17373642891687, gamma=1.2491263443165994, kernel=linear ....\n",
+      "[CV]  C=60.17373642891687, gamma=1.2491263443165994, kernel=linear, total=   7.6s\n",
+      "[CV] C=60.17373642891687, gamma=1.2491263443165994, kernel=linear ....\n",
+      "[CV]  C=60.17373642891687, gamma=1.2491263443165994, kernel=linear, total=   8.2s\n",
+      "[CV] C=60.17373642891687, gamma=1.2491263443165994, kernel=linear ....\n",
+      "[CV]  C=60.17373642891687, gamma=1.2491263443165994, kernel=linear, total=   7.0s\n",
+      "[CV] C=60.17373642891687, gamma=1.2491263443165994, kernel=linear ....\n",
+      "[CV]  C=60.17373642891687, gamma=1.2491263443165994, kernel=linear, total=   8.5s\n",
+      "[CV] C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf ......\n",
+      "[CV]  C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf, total=  11.8s\n",
+      "[CV] C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf ......\n",
+      "[CV]  C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf, total=  13.4s\n",
+      "[CV] C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf ......\n",
+      "[CV]  C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf, total=  18.0s\n",
+      "[CV] C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf ......\n"
      ]
     }
    ],
