--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5506,7 +5506,31 @@
       "[CV]  C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf, total=  13.4s\n",
       "[CV] C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf ......\n",
       "[CV]  C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf, total=  18.0s\n",
-      "[CV] C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf ......\n"
+      "[CV] C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf ......\n",
+      "[CV]  C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf, total=  20.2s\n",
+      "[CV] C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf ......\n",
+      "[CV]  C=15415.161544891856, gamma=0.2691677514619319, kernel=rbf, total=  17.7s\n",
+      "[CV] C=1888.9148509967113, gamma=0.739678838777267, kernel=linear ....\n",
+      "[CV]  C=1888.9148509967113, gamma=0.739678838777267, kernel=linear, total=   8.7s\n",
+      "[CV] C=1888.9148509967113, gamma=0.739678838777267, kernel=linear ....\n",
+      "[CV]  C=1888.9148509967113, gamma=0.739678838777267, kernel=linear, total=   8.5s\n",
+      "[CV] C=1888.9148509967113, gamma=0.739678838777267, kernel=linear ....\n",
+      "[CV]  C=1888.9148509967113, gamma=0.739678838777267, kernel=linear, total=  15.1s\n",
+      "[CV] C=1888.9148509967113, gamma=0.739678838777267, kernel=linear ....\n",
+      "[CV]  C=1888.9148509967113, gamma=0.739678838777267, kernel=linear, total=  13.8s\n",
+      "[CV] C=1888.9148509967113, gamma=0.739678838777267, kernel=linear ....\n",
+      "[CV]  C=1888.9148509967113, gamma=0.739678838777267, kernel=linear, total=   8.7s\n",
+      "[CV] C=55.53838911232773, gamma=0.578634378499143, kernel=linear .....\n",
+      "[CV]  C=55.53838911232773, gamma=0.578634378499143, kernel=linear, total=   8.1s\n",
+      "[CV] C=55.53838911232773, gamma=0.578634378499143, kernel=linear .....\n",
+      "[CV]  C=55.53838911232773, gamma=0.578634378499143, kernel=linear, total=   9.2s\n",
+      "[CV] C=55.53838911232773, gamma=0.578634378499143, kernel=linear .....\n",
+      "[CV]  C=55.53838911232773, gamma=0.578634378499143, kernel=linear, total=   7.8s\n",
+      "[CV] C=55.53838911232773, gamma=0.578634378499143, kernel=linear .....\n",
+      "[CV]  C=55.53838911232773, gamma=0.578634378499143, kernel=linear, total=   7.6s\n",
+      "[CV] C=55.53838911232773, gamma=0.578634378499143, kernel=linear .....\n",
+      "[CV]  C=55.53838911232773, gamma=0.578634378499143, kernel=linear, total=   7.5s\n",
+      "[CV] C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf ......\n"
      ]
     }
    ],
