--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5530,7 +5530,27 @@
       "[CV]  C=55.53838911232773, gamma=0.578634378499143, kernel=linear, total=   7.6s\n",
       "[CV] C=55.53838911232773, gamma=0.578634378499143, kernel=linear .....\n",
       "[CV]  C=55.53838911232773, gamma=0.578634378499143, kernel=linear, total=   7.5s\n",
-      "[CV] C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf ......\n"
+      "[CV] C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf ......\n",
+      "[CV]  C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf, total=  12.4s\n",
+      "[CV] C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf ......\n",
+      "[CV]  C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf, total=  11.5s\n",
+      "[CV] C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf ......\n",
+      "[CV]  C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf, total=  12.1s\n",
+      "[CV] C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf ......\n",
+      "[CV]  C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf, total=  12.0s\n",
+      "[CV] C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf ......\n",
+      "[CV]  C=26.714480823948186, gamma=1.0117295509275495, kernel=rbf, total=  11.2s\n",
+      "[CV] C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear ...\n",
+      "[CV]  C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear, total=  12.8s\n",
+      "[CV] C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear ...\n",
+      "[CV]  C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear, total=  14.6s\n",
+      "[CV] C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear ...\n",
+      "[CV]  C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear, total=  14.4s\n",
+      "[CV] C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear ...\n",
+      "[CV]  C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear, total=   9.7s\n",
+      "[CV] C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear ...\n",
+      "[CV]  C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear, total=  11.8s\n",
+      "[CV] C=198.7004781812736, gamma=0.5282819748826726, kernel=linear ....\n"
      ]
     }
    ],
