--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5550,7 +5550,37 @@
       "[CV]  C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear, total=   9.7s\n",
       "[CV] C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear ...\n",
       "[CV]  C=3582.0552780489566, gamma=1.1891370222133257, kernel=linear, total=  11.8s\n",
-      "[CV] C=198.7004781812736, gamma=0.5282819748826726, kernel=linear ....\n"
+      "[CV] C=198.7004781812736, gamma=0.5282819748826726, kernel=linear ....\n",
+      "[CV]  C=198.7004781812736, gamma=0.5282819748826726, kernel=linear, total=   9.1s\n",
+      "[CV] C=198.7004781812736, gamma=0.5282819748826726, kernel=linear ....\n",
+      "[CV]  C=198.7004781812736, gamma=0.5282819748826726, kernel=linear, total=   7.5s\n",
+      "[CV] C=198.7004781812736, gamma=0.5282819748826726, kernel=linear ....\n",
+      "[CV]  C=198.7004781812736, gamma=0.5282819748826726, kernel=linear, total=   8.5s\n",
+      "[CV] C=198.7004781812736, gamma=0.5282819748826726, kernel=linear ....\n",
+      "[CV]  C=198.7004781812736, gamma=0.5282819748826726, kernel=linear, total=   8.4s\n",
+      "[CV] C=198.7004781812736, gamma=0.5282819748826726, kernel=linear ....\n",
+      "[CV]  C=198.7004781812736, gamma=0.5282819748826726, kernel=linear, total=   8.7s\n",
+      "[CV] C=129.8000604143307, gamma=2.8621383676481322, kernel=linear ....\n",
+      "[CV]  C=129.8000604143307, gamma=2.8621383676481322, kernel=linear, total=   8.4s\n",
+      "[CV] C=129.8000604143307, gamma=2.8621383676481322, kernel=linear ....\n",
+      "[CV]  C=129.8000604143307, gamma=2.8621383676481322, kernel=linear, total=   8.7s\n",
+      "[CV] C=129.8000604143307, gamma=2.8621383676481322, kernel=linear ....\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=129.8000604143307, gamma=2.8621383676481322, kernel=linear, total=   8.7s\n",
+      "[CV] C=129.8000604143307, gamma=2.8621383676481322, kernel=linear ....\n",
+      "[CV]  C=129.8000604143307, gamma=2.8621383676481322, kernel=linear, total=   7.8s\n",
+      "[CV] C=129.8000604143307, gamma=2.8621383676481322, kernel=linear ....\n",
+      "[CV]  C=129.8000604143307, gamma=2.8621383676481322, kernel=linear, total=   7.6s\n",
+      "[CV] C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf ......\n",
+      "[CV]  C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf, total=  11.1s\n",
+      "[CV] C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf ......\n",
+      "[CV]  C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf, total=  12.3s\n",
+      "[CV] C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf ......\n"
      ]
     }
    ],
