--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5580,7 +5580,23 @@
       "[CV]  C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf, total=  11.1s\n",
       "[CV] C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf ......\n",
       "[CV]  C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf, total=  12.3s\n",
-      "[CV] C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf ......\n"
+      "[CV] C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf ......\n",
+      "[CV]  C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf, total=  18.0s\n",
+      "[CV] C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf ......\n",
+      "[CV]  C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf, total=  31.1s\n",
+      "[CV] C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf ......\n",
+      "[CV]  C=288.4269299593897, gamma=0.17580835850006285, kernel=rbf, total=  17.9s\n",
+      "[CV] C=6287.039489427172, gamma=0.3504567255332862, kernel=linear ....\n",
+      "[CV]  C=6287.039489427172, gamma=0.3504567255332862, kernel=linear, total=  11.3s\n",
+      "[CV] C=6287.039489427172, gamma=0.3504567255332862, kernel=linear ....\n",
+      "[CV]  C=6287.039489427172, gamma=0.3504567255332862, kernel=linear, total=  11.8s\n",
+      "[CV] C=6287.039489427172, gamma=0.3504567255332862, kernel=linear ....\n",
+      "[CV]  C=6287.039489427172, gamma=0.3504567255332862, kernel=linear, total=  11.4s\n",
+      "[CV] C=6287.039489427172, gamma=0.3504567255332862, kernel=linear ....\n",
+      "[CV]  C=6287.039489427172, gamma=0.3504567255332862, kernel=linear, total=  10.1s\n",
+      "[CV] C=6287.039489427172, gamma=0.3504567255332862, kernel=linear ....\n",
+      "[CV]  C=6287.039489427172, gamma=0.3504567255332862, kernel=linear, total=  10.1s\n",
+      "[CV] C=61217.04421344494, gamma=1.6279689407405564, kernel=rbf .......\n"
      ]
     }
    ],
