--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6007,7 +6007,129 @@
       "[CV]  feature_selection__k=2, preparation__num__imputer__strategy=median, total=  10.8s\n",
       "[CV] feature_selection__k=2, preparation__num__imputer__strategy=median \n",
       "[CV]  feature_selection__k=2, preparation__num__imputer__strategy=median, total=  10.2s\n",
-      "[CV] feature_selection__k=2, preparation__num__imputer__strategy=median \n"
+      "[CV] feature_selection__k=2, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=2, preparation__num__imputer__strategy=median, total=  10.9s\n",
+      "[CV] feature_selection__k=2, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=2, preparation__num__imputer__strategy=most_frequent, total=  10.8s\n",
+      "[CV] feature_selection__k=2, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=2, preparation__num__imputer__strategy=most_frequent, total=  10.7s\n",
+      "[CV] feature_selection__k=2, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=2, preparation__num__imputer__strategy=most_frequent, total=  10.3s\n",
+      "[CV] feature_selection__k=2, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=2, preparation__num__imputer__strategy=most_frequent, total=  11.2s\n",
+      "[CV] feature_selection__k=2, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=2, preparation__num__imputer__strategy=most_frequent, total=   9.5s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=mean, total=  12.5s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=mean, total=  23.9s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=mean, total=  26.8s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=mean, total=  13.5s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=mean, total=  11.0s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=median, total=  10.2s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=median, total=  12.2s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=median, total=  11.9s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=median, total=  12.2s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=median, total=  13.9s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=most_frequent, total=   9.9s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=most_frequent, total=  10.2s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=most_frequent, total=  10.6s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=most_frequent, total=  11.9s\n",
+      "[CV] feature_selection__k=3, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=3, preparation__num__imputer__strategy=most_frequent, total=  13.6s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=mean, total=  16.7s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=mean, total=  12.5s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=mean, total=  10.7s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=mean, total=  11.2s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=mean, total=  10.8s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=median, total=  11.0s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=median, total=  11.5s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=median \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=median, total=  12.0s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=median, total=  13.6s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=median, total=  12.2s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=most_frequent, total=  12.2s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=most_frequent, total=  13.0s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=most_frequent, total=  10.8s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=most_frequent, total=  12.5s\n",
+      "[CV] feature_selection__k=4, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=4, preparation__num__imputer__strategy=most_frequent, total=  11.0s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=mean, total=  11.6s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=mean, total=  12.0s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=mean, total=  12.8s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=mean, total=  12.4s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=mean, total=  12.1s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=median, total=  11.7s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=median, total=  12.9s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=median, total=  11.6s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=median, total=  12.2s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=median, total=  12.1s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=most_frequent, total=  12.2s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=most_frequent, total=  12.1s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=most_frequent, total=  13.4s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=most_frequent, total=  13.2s\n",
+      "[CV] feature_selection__k=5, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=5, preparation__num__imputer__strategy=most_frequent, total=  11.4s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=mean, total=  12.9s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=mean, total=  12.9s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=mean, total=  12.2s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=mean, total=  12.9s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=mean, total=  12.3s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=median, total=  13.3s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=median, total=  13.1s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=median \n"
      ]
     }
    ],
