--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6129,7 +6129,39 @@
       "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=median, total=  13.3s\n",
       "[CV] feature_selection__k=6, preparation__num__imputer__strategy=median \n",
       "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=median, total=  13.1s\n",
-      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=median \n"
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=median, total=  16.6s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=median, total=  12.5s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=median, total=  18.3s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=most_frequent, total=  14.9s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=most_frequent, total=  18.3s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=most_frequent, total=  17.0s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=most_frequent, total=  16.3s\n",
+      "[CV] feature_selection__k=6, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=6, preparation__num__imputer__strategy=most_frequent, total=  14.4s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=mean, total=  15.9s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=mean, total=  13.6s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=mean, total=  13.6s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=mean, total=  14.0s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=mean, total=  14.2s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=median, total=  15.3s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=median, total=  13.7s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=median, total=  14.9s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=median \n"
      ]
     }
    ],
