--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6161,7 +6161,45 @@
       "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=median, total=  13.7s\n",
       "[CV] feature_selection__k=7, preparation__num__imputer__strategy=median \n",
       "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=median, total=  14.9s\n",
-      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=median \n"
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=median, total=  15.0s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=median, total=  16.2s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=most_frequent, total=  18.7s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=most_frequent, total=  26.2s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=most_frequent \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=most_frequent, total=  19.5s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=most_frequent, total=  15.2s\n",
+      "[CV] feature_selection__k=7, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=7, preparation__num__imputer__strategy=most_frequent, total=  18.2s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=mean, total=  21.7s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=mean, total=  21.4s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=mean, total=  28.3s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=mean, total=  16.6s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=mean, total=  23.6s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=median, total=  23.4s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=median, total=  22.9s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=median, total=  24.7s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=median, total=  23.7s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=median \n"
      ]
     }
    ],
