--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6199,7 +6199,55 @@
       "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=median, total=  24.7s\n",
       "[CV] feature_selection__k=8, preparation__num__imputer__strategy=median \n",
       "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=median, total=  23.7s\n",
-      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=median \n"
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=median, total=  29.7s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=most_frequent, total=  21.3s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=most_frequent, total=  33.7s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=most_frequent, total=  28.8s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=most_frequent, total=  20.1s\n",
+      "[CV] feature_selection__k=8, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=8, preparation__num__imputer__strategy=most_frequent, total=  18.7s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=mean, total=  26.1s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=mean, total=  26.7s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=mean, total=  23.7s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=mean, total=  28.0s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=mean, total=  22.0s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=median, total=  26.5s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=median, total=  27.2s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=median, total=  24.2s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=median, total=  26.4s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=median, total=  21.7s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=most_frequent, total=  28.0s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=most_frequent, total=  27.8s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=most_frequent, total=  26.1s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=most_frequent, total=  24.6s\n",
+      "[CV] feature_selection__k=9, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=9, preparation__num__imputer__strategy=most_frequent, total=  22.4s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=mean, total=  28.5s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=mean, total=  27.8s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=mean, total=  33.6s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=mean \n"
      ]
     }
    ],
