--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6247,7 +6247,45 @@
       "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=mean, total=  27.8s\n",
       "[CV] feature_selection__k=10, preparation__num__imputer__strategy=mean \n",
       "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=mean, total=  33.6s\n",
-      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=mean \n"
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=mean, total=  29.3s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=mean, total=  27.7s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=median, total=  38.4s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=median, total=  32.5s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=median, total=  30.1s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=median, total=  28.2s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=median, total=  30.1s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=most_frequent, total=  27.4s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=most_frequent, total=  28.3s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=most_frequent, total=  25.1s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=most_frequent, total=  27.8s\n",
+      "[CV] feature_selection__k=10, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=10, preparation__num__imputer__strategy=most_frequent, total=  29.4s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=mean, total=  32.4s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=mean, total=  31.2s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=mean \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=mean, total=  31.5s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=mean, total=  31.5s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=mean \n"
      ]
     }
    ],
