--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6285,7 +6285,35 @@
       "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=mean, total=  31.5s\n",
       "[CV] feature_selection__k=11, preparation__num__imputer__strategy=mean \n",
       "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=mean, total=  31.5s\n",
-      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=mean \n"
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=mean, total=  42.2s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=median, total=  38.5s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=median, total=  27.5s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=median, total=  28.3s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=median, total=  31.4s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=median, total=  33.8s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=most_frequent, total=  39.8s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=most_frequent, total=  28.1s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=most_frequent, total=  28.6s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=most_frequent, total=  31.5s\n",
+      "[CV] feature_selection__k=11, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=11, preparation__num__imputer__strategy=most_frequent, total=  36.5s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=mean, total=  34.3s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=mean, total=  31.2s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=mean, total=  34.5s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=mean \n"
      ]
     }
    ],
