--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6313,7 +6313,17 @@
       "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=mean, total=  31.2s\n",
       "[CV] feature_selection__k=12, preparation__num__imputer__strategy=mean \n",
       "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=mean, total=  34.5s\n",
-      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=mean \n"
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=mean, total=  36.3s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=mean, total=  39.3s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=median, total=  50.1s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=median, total=  33.1s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=median, total=  36.2s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=median \n"
      ]
     }
    ],
