--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6329,6 +6329,8 @@
       "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=median, total=  57.4s\n",
       "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n",
       "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total=  26.6s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total=  35.4s\n",
       "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n"
      ]
     }
