--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6331,6 +6331,10 @@
       "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total=  26.6s\n",
       "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n",
       "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total=  35.4s\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total= 1.7min\n",
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total=  35.4s\n",
       "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n"
      ]
     }
