--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6335,7 +6335,11 @@
       "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total= 1.7min\n",
       "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n",
       "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total=  35.4s\n",
-      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n"
+      "[CV] feature_selection__k=12, preparation__num__imputer__strategy=most_frequent \n",
+      "[CV]  feature_selection__k=12, preparation__num__imputer__strategy=most_frequent, total=  31.8s\n",
+      "[CV] feature_selection__k=13, preparation__num__imputer__strategy=mean \n",
+      "[CV]  feature_selection__k=13, preparation__num__imputer__strategy=mean, total= 1.0min\n",
+      "[CV] feature_selection__k=13, preparation__num__imputer__strategy=mean \n"
      ]
     }
    ],
