--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -6511,6 +6511,12 @@
       "[CV]  feature_selection__k=13, preparation__num__imputer__strategy=mean, total=  34.2s\n",
       "[CV] feature_selection__k=13, preparation__num__imputer__strategy=mean \n",
       "[CV]  feature_selection__k=13, preparation__num__imputer__strategy=mean, total=  25.1s\n",
+      "[CV] feature_selection__k=13, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=13, preparation__num__imputer__strategy=median, total=  53.6s\n",
+      "[CV] feature_selection__k=13, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=13, preparation__num__imputer__strategy=median, total=  36.0s\n",
+      "[CV] feature_selection__k=13, preparation__num__imputer__strategy=median \n",
+      "[CV]  feature_selection__k=13, preparation__num__imputer__strategy=median, total=  36.3s\n",
       "[CV] feature_selection__k=13, preparation__num__imputer__strategy=median \n"
      ]
     }
